<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="need_to_do">Нужно выполнить</string>
    <string name="done">Выполнены</string>
    <string name="tasks">Tasks</string>
    <string name="tasks_need_to_do">Текущие задачи</string>

    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="enter_note">Enter note:</string>
    <string name="save">Save</string>
    <string name="tasks_for_today">Tasks for today</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>