<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddNoteActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextNote"
        android:layout_width="match_parent"
        android:layout_margin="12dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_note" />

    <RadioGroup
        android:id="@+id/radioGroupPriority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="20dp">

        <RadioButton
            android:id="@+id/radioButtonLow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:padding="12dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@android:color/holo_green_light"/>

        <RadioButton
            android:id="@+id/radioButtonMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:background="@android:color/holo_orange_light"
            android:padding="12dp"/>

        <RadioButton
            android:id="@+id/radioButtonHigh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:padding="12dp"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:background="@android:color/holo_red_light"/>
    </RadioGroup>

    <Button
        android:id="@+id/buttonSave"
        android:layout_marginTop="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save" />


</LinearLayout>